# logi-parser

./: README.md
cpp/: CMakeLists.txt  README.md
cpp/include/: MessageParser.h  Printer.h  Types.h
cpp/src/: MessageParser.cpp  Printer.cpp  main.cpp
python/: README.md  logi_parser.py
